--- a/study-record.html
+++ b/study-record.html
@@ -296,7 +296,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <ul class="list-style1">
       <li><strong>Code</strong>: C36</li>
       <li><strong>Credits</strong>: 360 of 360</li>
-      <strong> <li><a href="#">View qualification description</a></li> 
+       <li><a href="#">View qualification description</a></li> 
     </ul>
     
     <table class="qual-progress">
