--- a/study-record-failed-resit.html
+++ b/study-record-failed-resit.html
@@ -123,7 +123,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-    <option value="study-record.html">Standard</option>
+ <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html" selected>Access Module</option>
@@ -135,8 +135,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
-    <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
-  </select>
+    <option value="study-record-moved-on-from-access.html">Moved on from Access</option>  </select>
 </form>
 <!-- END SWITCHER -->
 
@@ -170,16 +169,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
-
-<h3><strong id="docs-internal-guid-42ebb8af-3d2c-9568-9a7b-4291b7f39be8">Resits, resubmissions and postponements </strong></h3>
-<table>
-  <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Feb 2016</td>
-    <td>60 credits</td>
-    <td>Resit</td>
-  </tr>
-</table>
 <h3>Current modules</h3>
 
 <table>
@@ -190,18 +179,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td>Enrolled</td>
   </tr>
 </table>
-
-<h3>Postponed or entitled to resit or resubmit</h3>
-<table>
-  <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-    <td>60 credits</td>
-    <td>Entitled to resit</td>
-  </tr>
- 
-</table>
-
 
 <h3>Completed modules</h3>
 <table>
@@ -287,15 +264,17 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div> <!-- end box-expand-collapse-inner -->
 </div> <!-- end box-expand-collapse -->
  
-<!--<div class="box-expand-collapse collapsed">
+<div class="box-expand-collapse collapsed">
     <h2>Other  modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
 
  <div class="box-expand-collapse-inner">
    
       <table>
         <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-    <td>Entitled to resit</td>
+  
+    <td>Feb 2015</td>
+    <td>60 credits</td>
+    <td>Failed</td>
       </table>
     </div>
     <!-- end box-expand-collapse-inner -->
