--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -122,15 +122,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-    <option value="study-record.html">Standard</option>
+   <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html">Access Module</option>
+    <option value="study-record-access.html" selected>Access Module</option>
     <option value="study-record-resit.html">Resit</option>
+      <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
+    <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
+    <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
-    <option value="study-record-module-only.html" selected>Module Only</option>
+    <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
+    <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
   </select>
 </form>
 <!-- END SWITCHER -->
@@ -146,16 +150,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p><a href="#" class="ou-btn">Choose next modules</a></p>
   </div>
   <div class="box-expand-collapse">
-    <h2>Current modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <h2>Current modules<a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
-          
-      <h3>Enrolled modules</h3>
+        <h3>Your Access module</h3>  
+  
       <table>
         <tr>
           <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
           <td>Oct 2015</td>
+          <td>30 credits</td>
+          <td>Enrolled</td>
         </tr>
       </table>
+        <p>An Access module gives you a fantastic introduction to study. If you'd like to build on what you've learnt and study towards a qualification find out more about <a href="#">Moving on from Access</a>.
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
 
     </div> <!-- end box-expand-collapse-inner -->
@@ -163,11 +170,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <div class="box-expand-collapse">
     <h2>Completed modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
-      <h3>Completed modules</h3>
+      <h3>Your Access module</h3>
       <table>
         <tr>
           <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
           <td>Oct 2013</td>
+          <td>30 credits</td>
           <td>Pass</td>
         </tr>
       </table>
@@ -202,37 +210,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 </div>
 
-</div>
-</div>
-
-<div class="r3 aside">
-
-
-<div class="box box-questions">
-<h2>How do I?</h2>
-<ul>
-  <li><a href="#">Change my qualification?</a></li>
-  <li><a href="#">Change my module?</a></li>
-  <li><a href="#">Take a break from my studies</a>?</li>
-  <li><a href="#">Apply for a tuition fee loan?</a></li>
-  <li><a href="#">Get help studying for a disability?</a></li>
-</ul>
-  
-<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
-</div>
-
-<div class="box box-downloads">
-<h2>Downloads</h2>
-<ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
-</ul>
-</div>
-
-</div>
 
 </div>
 </div>
