--- a/study-record.html
+++ b/study-record.html
@@ -122,15 +122,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-    <option value="study-record.html" selected>Standard</option>
+  <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html">Access Module</option>
+    <option value="study-record-access.html" selected>Access Module</option>
     <option value="study-record-resit.html">Resit</option>
+      <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
+    <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
+    <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
+    <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
   </select>
 </form>
 <!-- END SWITCHER -->
@@ -183,10 +187,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tr>
     <td><a href="module-record.html">Engineering: professions, practice and skills 2 (T276)</a></td>
     <td>Feb 2016</td>
+    <td>30 credits</td>
+    <td>Enrolled</td>
   </tr>
   <tr>
     <td><a href="module-record.html">Design for engineers (T218)</a></td>
     <td>Oct 2015</td>
+        <td>30 credits</td>
+    <td>Enrolled</td>
   </tr>
 </table>
 
@@ -197,26 +205,31 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tr>
     <td><a href="module-record.html"> Engineering: mechanics, materials, design (T207)</a></td>
     <td>Oct 2014</td>
+    <td>60 credits</td>
     <td>Grade 3 pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">Engineering: professions, practice and skills 1 (T176)</a></td>
     <td>Feb 2014</td>
+     <td>60 credits</td>
     <td>Pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">Exploring mathematics (MS221)</a></td>
     <td>Oct 2013</td>
+     <td>30 credits</td>
     <td>Grade 4 pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">Using mathematics (MST121)</a></td>
     <td>Feb 2013</td>
+     <td>60 credits</td>
     <td>Grade 3 pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">Engineering the future (T173)</a></td>
     <td>Oct 2012</td>
+     <td>30 credits</td>
     <td>Distinction</td>
   </tr>
 </table>
@@ -296,7 +309,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <ul class="list-style1">
       <li><strong>Code</strong>: C36</li>
       <li><strong>Credits</strong>: 360 of 360</li>
-       <li><a href="#">View qualification description</a></li> 
+      <strong> <li><a href="#">View qualification description</a></li> 
     </ul>
     
     <table class="qual-progress">
