--- a/study-record-deferred-enrolled-next-pres.html
+++ b/study-record-deferred-enrolled-next-pres.html
@@ -75,7 +75,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <li class="ou-role-accessibility"><a href="#">Accessibility</a></li>
       <li class="ou-role-signin" id="ou-signin1"><a href="#" id="ou-signin2">Sign in</a></li>
       <li id="ou-signout" class="ou-role-signout"><a href="#" id="ou-signout2">/ Sign out</a></li>
-      <li id="ou-studenthome" class="ou-role-studenthome"><a href="/index.html" id="ou-studenthome2">StudentHome</a></li>
+      <li id="ou-studenthome" class="ou-role-studenthome"><a href="index.html" id="ou-studenthome2">StudentHome</a></li>
       <li id="ou-tutorhome" class="ou-role-tutorhome"><a href="#">TutorHome</a></li>
       <li id="ou-intranet" class="ou-role-intranet"><a href="#">IntranetHome</a></li>
       <li id="ou-sponsor" class="ou-role-sponsor"><a href="#">SponsorHome</a></li>
@@ -114,7 +114,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <ol class="ou-breadcrumb">
 	<li><a href="studenthome.html">StudentHome</a></li>
 	<li><a href="profile.html">Profile</a></li>
-	<li>Study record</li></ol>
+	<li>Study record</li>
+</ol>
 
 
 <div class="r2">
@@ -123,7 +124,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-    <option value="study-record.html">Standard</option>
+   <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html" selected>Access Module</option>
@@ -143,6 +144,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h1 class="h1main">Study record</h1>
 
 <div class="inview">
+
+<div class="box-alert">
+      <h2>Deferred with assessment banking</h2>
+      <p>You’ve stopped studying a module and banked your assessment scores. You need to enrol on another presentation of that module within 13 months of the original module start date to keep your scores. <a href="#">Contact your SST to enrol</a>. </p>
+</div>
+
   <div class="box-expand-collapse">
     
   <h2>BA/BSc (Honours) Open degree (in progress)<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
@@ -171,50 +178,44 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <hr>
 
-<h3><strong id="docs-internal-guid-42ebb8af-3d2c-9568-9a7b-4291b7f39be8">Resits, resubmissions and postponements </strong></h3>
+<h3>Enrolled modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Feb 2016</td>
-    <td>60 credits</td>
-    <td>Resit</td>
-  </tr>
-</table>
-<h3>Current modules</h3>
-
-<table>
-  <tr>
-    <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
-    <td>Oct 2015</td>
+    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td>Oct 2016</td>
     <td>60 credits</td>
     <td>Enrolled</td>
   </tr>
 </table>
 
-<h3>Postponed or entitled to resit or resubmit</h3>
+
+
+<h3>Deferred modules</h3>
+<table>
+  <tr>
+    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td>Oct 2015</td>
+    <td>60 credits</td>
+    <td>(deferred, assessment banked)
+      </td>
+  </tr>
+</table>
+<h3>Completed modules</h3>
 <table>
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
     <td>Oct 2014</td>
-    <td>60 credits</td>
-    <td>Entitled to resit</td>
+     <td>60 credits</td>
+    <td>Pass</td>
+   
   </tr>
- 
-</table>
-
-
-<h3>Completed modules</h3>
-<table>
-
   <tr>
     <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>Feb 2013</td>
-    <td>30 credits</td>
+    <td>Oct 2013</td>
+        <td>30 credits</td>
     <td>Pass</td>
   </tr>
 </table>
-
-
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
@@ -270,7 +271,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </dd>
  
 
-
   <dt>Regulations</dt>
 <dd>
   <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
@@ -285,22 +285,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </dl>
 
 </div> <!-- end box-expand-collapse-inner -->
-</div> <!-- end box-expand-collapse -->
- 
-<!--<div class="box-expand-collapse collapsed">
-    <h2>Other  modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
-
- <div class="box-expand-collapse-inner">
-   
-      <table>
-        <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>Oct 2014</td>
-    <td>Entitled to resit</td>
-      </table>
-    </div>
-    <!-- end box-expand-collapse-inner -->
-  </div> 
+</div>
   <!-- end box-expand-collapse -->
+ 
 
 
 <p><a href="profile.html">Back to Profile</a></p>
@@ -324,6 +311,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+<p class="box-link"><a href="#">Your student loan</a></p>
 
 </div>
 
