--- a/study-record-finished-access.html
+++ b/study-record-finished-access.html
@@ -122,15 +122,19 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-    <option value="study-record.html">Standard</option>
+   <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html">Access Module</option>
+    <option value="study-record-access.html" selected>Access Module</option>
     <option value="study-record-resit.html">Resit</option>
+      <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
+    <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
+    <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
-    <option value="study-record-finished-access.html" selected>Finished Access</option>
+    <option value="study-record-finished-access.html">Finished Access</option>
+    <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
   </select>
 </form>
 <!-- END SWITCHER -->
@@ -181,16 +185,39 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tr>
     <td><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
     <td>Oct 2015</td>
+    <td>60 credits</td>
+    <td>Enrolled</td>
   </tr>
 </table>
-<h3>Completed modules</h3>
+<!--<h3>Completed modules</h3>
 <table>
   <tr>
     <td><a href="module-record.html">The arts and the present (AA100)</a></td>
     <td>Oct 2014</td>
     <td>Pass</td>
   </tr>
-</table>
+</table>-->
+
+<div class="box-expand-collapse">
+    <h2>Your Access module <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <div class="box-expand-collapse-inner">
+    <p>Congratulations on passing your access module. This represents your first step towards a qualification. The credit from it does not count towards your qualification but it means you are better prepared for your studies.</p>
+    <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
+      <table>
+        <tr>
+          <td><a href="module-record.html">Starting with psychology (Y183)</a></td>
+          <td>Oct 2013</td>
+          <td>30 credits</td>
+          <td>Pass</td>
+        </tr>
+    </table>
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div> 
+  <!-- end box-expand-collapse -->
+
+
+
 <dl class="show-hide">
   <dt>Educational aims and learning outcomes</dt>
 <dd>
@@ -252,22 +279,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 </div> <!-- end box-expand-collapse-inner -->
 </div>
-  <div class="box-expand-collapse">
-    <h2>Your other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
-    <div class="box-expand-collapse-inner">
-      <h3>Completed modules</h3>
-      <table>
-        <tr>
-          <td><a href="module-record.html">Starting with psychology (Y183)</a></td>
-          <td>Oct 2013</td>
-          <td>Pass</td>
-        </tr>
-    </table>
-    </div>
-    <!-- end box-expand-collapse-inner -->
-  </div> 
-  <!-- end box-expand-collapse -->
-
+  
 <p><a href="profile.html">Back to Profile</a></p>
 
 </div>
