Elle's latest changes

--- a/module-record-a-t218.html
+++ b/module-record-a-t218.html
@@ -298,16 +298,16 @@
 
 <h2 class="style1">Your qualifications</h2>
 
-    <p>You are planning to count this module towards:</p>
-    
-    <table class="two-cols">
+  <p>You are planning to count this modu</p>
+  <table class="two-cols">
     <tbody>
-    <tr>
-    <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">Bachelor of Engineering (Honours)</a></td>
-    <td><a href="qualification-link.aspx?q=Q65&amp;o=1" class="std6">Stop this module counting</a></td></tr>
+      <tr>
+        <td><a href="qualification.aspx?q=Q65&amp;o=1&amp;stay=1">Bachelor of Engineering (Honours)</a></td>
+        <td><a href="qualification-link.aspx?q=Q65&amp;o=1" class="std6">Stop this module counting</a></td>
+      </tr>
     </tbody>
-    </table>
-
+  </table>
+  <p>le towards:</p>
 </div>
 
 <div class="ou-block">
@@ -320,6 +320,22 @@
     our <a href="http://www.open.ac.uk/learning/back-on-track">Back on track</a> website or speak to your <a href="student-support-team.aspx?m=T218">Student Support Team</a>.</p>
 
 </div>
+
+
+<div class="ou-block">
+
+    <h2 class="style1">Regulation documents</h2>
+    
+    <p>These are the key policy documents relating to your your enrolment on this module. These only relate to your study on this module in this academic year.  If you need to check the regulations for a different module, check the module record for that module, you can find them all on your <a href="http://stephenturvey.github.io/study-planning/study-record.html#">study record</a>. You can also find your qualification regulations there.</p>
+<ul>
+<li>Conditions of registration 2016/17</li>
+<li>Fee rules 2016/17</li>
+<li>Academic regulations (taught courses) 2016</li>
+
+<p>You can find further regulation documents on <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a></p>
+</div>
+
+
 
 <div class="ou-block">
 
