--- a/study-record.html
+++ b/study-record.html
@@ -122,12 +122,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!-- PERSONA SWITCHER -->
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
-  <option value="study-record.html">Standard</option>
+  <option value="study-record.html" selected>Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
-      <option value="study-record-failed-resit.html" selected>Failed resit</option>
+      <option value="study-record-failed-resit.html">Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
@@ -185,13 +185,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <table>
   <tr>
-    <td><a href="module-record.html">Engineering: professions, practice and skills 2 (T276)</a></td>
+    <td><a href="module-record-a-t276.html">Engineering: professions, practice and skills 2 (T276)</a></td>
     <td>Feb 2016</td>
     <td>30 credits</td>
     <td>Enrolled</td>
   </tr>
   <tr>
-    <td><a href="module-record.html">Design for engineers (T218)</a></td>
+    <td><a href="module-record-a-t218.html">Design for engineers (T218)</a></td>
     <td>Oct 2015</td>
         <td>30 credits</td>
     <td>Enrolled</td>
@@ -285,10 +285,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
  
 
 
-  <dt>Regulations</dt>
+  <dt>Qualification Regulations</dt>
 <dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+  <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+  <p><a href="#">General Qualification Regulations</a></p>
 </dd>
 
   <dt>Qualification Fee</dt>
@@ -341,6 +341,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="r3 aside">
 
+<div class="box box-questions">
+<h2>Your Qualifications</h2>
+<p>Jump to...
+<ul>
+  <li><a href="#">Bachelor of Engineering (Honours)</a></li>
+<li><a href="#">Certficate in Humanities</a></li>
+</ul>
+</div>
+
+
 
 <div class="box box-questions">
 <h2>How do I?</h2>
@@ -357,12 +367,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 
 <div class="box box-downloads">
-<h2>Downloads</h2>
+<h2>Student Academic Summary</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
 </ul>
 </div>
 
