More changes from Elle

--- a/study-record-deferred-enrolled-next-pres.html
+++ b/study-record-deferred-enrolled-next-pres.html
@@ -127,11 +127,11 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
-      <option value="study-record-failed-resit.html" selected>Failed resit</option>
+      <option value="study-record-failed-resit.html">Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
-    <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
+    <option value="study-record-deferred-enrolled-next-pres.html" selected>Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
@@ -221,7 +221,11 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <hr>
 
 <dl class="show-hide">
-
+<dt>Qualification Regulations</dt>
+  <dd>
+    <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+    <p><a href="#">General Qualification Regulations</a></p>
+  </dd>
 <dt>Open degree advisory routes</dt>
 <dd>
 <p>Read about the <a href="bd-advisory-routes.html">Open degree advisory routes</a>.</p>
@@ -263,19 +267,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
-
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-
-  <dt>Regulations</dt>
-<dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-</dd>
+<dt>&nbsp;</dt>
+<dd>&nbsp;</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -316,12 +309,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 
 <div class="box box-downloads">
-<h2>Downloads</h2>
+<h2>Student Academic Summary</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
 </ul>
 </div>
 
