--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -213,6 +213,36 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 </div>
 </div>
+
+<div class="r3 aside">
+
+
+<div class="box box-questions">
+<h2>How do I?</h2>
+<ul>
+  <li><a href="#">Change my qualification?</a></li>
+  <li><a href="#">Change my module?</a></li>
+  <li><a href="#">Take a break from my studies</a>?</li>
+  <li><a href="#">Apply for a tuition fee loan?</a></li>
+  <li><a href="#">Get help studying for a disability?</a></li>
+</ul>
+  
+<p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+<p class="box-link"><a href="#">Your student loan</a></p>
+</div>
+
+<div class="box box-downloads">
+<h2>Student Academic Summary</h2>
+<ul>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
+</ul>
+</div>
+</div>
+
+</div>
+</div>
+
 <div id="ou-org-footer">
 
 <div class="ou-grid ou-mobile-footer" id="ou-mobile-jlinks"></div>
