--- a/study-record.html
+++ b/study-record.html
@@ -153,7 +153,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 <div class="box-expand-collapse">
   
-  <h2>Bachelor of Engineering (Honours) (in progess) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+  <h2 id="qual1">Bachelor of Engineering (Honours) (in progess) <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-expand-collapse-inner">
@@ -240,7 +240,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <hr>
 
 <dl class="show-hide">
-<dt>Educational aims and learning outcomes</dt>
+  <dt>Qualification Regulations</dt>
+  <dd>
+    <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+    <p><a href="#">General Qualification Regulations</a></p>
+  </dd>
+  <dt>Educational aims and learning outcomes</dt>
 <dd>
    
     
@@ -276,20 +281,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
 
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-
-
-  <dt>Qualification Regulations</dt>
-<dd>
-  <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-  <p><a href="#">General Qualification Regulations</a></p>
-</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -303,7 +295,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="box-expand-collapse collapsed">
   
-  <h2>Certificate in Humanities (completed)<a href="#" class="show-hide plus">Expand/collapse</a></h2>
+  <h2 id ="qual2">Certificate in Humanities (completed)<a href="#" class="show-hide plus">Expand/collapse</a></h2>
     
     <div class="box-expand-collapse-inner">
     <ul class="list-style1">
@@ -343,10 +335,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="box box-questions">
 <h2>Your Qualifications</h2>
-<p>Jump to...
+<p>View information for...
 <ul>
-  <li><a href="#">Bachelor of Engineering (Honours)</a></li>
-<li><a href="#">Certficate in Humanities</a></li>
+  <li><a href="#qual1">Bachelor of Engineering (Honours)</a></li>
+<li><a href="#qual2">Certficate in Humanities</a></li>
 </ul>
 </div>
 
