--- a/study-record-access.html
+++ b/study-record-access.html
@@ -149,29 +149,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
     <p><a href="#" class="ou-btn">Choose next modules</a></p>
   </div>
- 
+  <div class="box-expand-collapse-inner">
+  <div class="box-expand-collapse">
+
     
     <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Literature and Creative Writing (in progress)</h2>
 
 
-<div class="box-expand-collapse-inner">
- <div class="box-expand-collapse">
-    <h2>Your Access module <a href="#" class="show-hide minus">Expand/collapse</a></h2>
-    <div class="box-expand-collapse-inner">
-    <p>This is your first step on your journey towards a qualfication.</p>
-      <table>
-        <tr>
-          <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
-          <td>Oct 2015</td>
-          <td>30 credits</td>
-          <td>Enrolled</td>
-        </tr>
-      </table>
-      <p>Looking to your next module? <a href="#">Take a look at Moving on from Access</a></p>
-    </div>
-    <!-- end box-expand-collapse-inner -->
-  </div>
-  <div class="box-expand-collapse">
+
 <ul class="list-style1">
   <li><strong>Code</strong>: Q86</li>
  <!-- <li><strong>Status</strong>: in progress</li>-->
@@ -192,11 +177,36 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   </tr>
 </table>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
+
+<div class="box-expand-collapse-inner">
+ <div class="box-expand-collapse">
+    <h2>Your Access module <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <div class="box-expand-collapse-inner">
+    <p>This is your first step on your journey towards a qualfication. While the credit from it doesn't count towards a qualification you are gaining the skills and knowledge to help you suceed in study.</p>
+      <table>
+        <tr>
+          <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
+          <td>Oct 2015</td>
+          <td>30 credits</td>
+          <td>Enrolled</td>
+        </tr>
+      </table>
+      <p>Thinking about your next steps? Take a look at <a href="#">Moving on from Access</a></p>
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div>
+
+
+
 <hr>
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) English Literature and Creative Writing</p>
 
 <hr>
-
+<dt>Qualification Regulations</dt>
+  <dd>
+    <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+    <p><a href="#">General Qualification Regulations</a></p>
+  </dd>
 <dl class="show-hide">
 <dt>Educational aims and learning outcomes</dt>
 <dd>
@@ -234,19 +244,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
-
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-
-  <dt>Regulations</dt>
-<dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-</dd>
+<dt>&nbsp;</dt>
+<dd>&nbsp;</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -255,7 +254,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 </dl>
 
-</div> <!-- end box-expand-collapse-inner -->
+</div> 
+<!-- end box-expand-collapse-inner -->
 </div> <!-- end box-expand-collapse -->
 
 <p><a href="profile.html">Back to Profile</a></p>
@@ -283,12 +283,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 
 <div class="box box-downloads">
-<h2>Downloads</h2>
+<h2>Student Academic Summary</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
 </ul>
 </div>
 
