--- a/study-record-finished-access.html
+++ b/study-record-finished-access.html
@@ -125,15 +125,15 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
    <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html" >Access Module</option>
     <option value="study-record-resit.html">Resit</option>
-      <option value="study-record-failed-resit.html" selected>Failed resit</option>
+      <option value="study-record-failed-resit.html">Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-deferred-enrolled-next-pres.html">Deferred- enrolled next pres</option>
     <option value="study-record-deferred-completed.html">Deferred - completed</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
-    <option value="study-record-finished-access.html">Finished Access</option>
+    <option value="study-record-finished-access.html" selected>Finished Access</option>
     <option value="study-record-moved-on-from-access.html">Moved on from Access</option>
   </select>
 </form>
@@ -219,6 +219,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 
 <dl class="show-hide">
+
+<dt>Qualification Regulations</dt>
+  <dd>
+    <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+    <p><a href="#">General Qualification Regulations</a></p>
+  </dd>
   <dt>Educational aims and learning outcomes</dt>
 <dd>
    
@@ -255,20 +261,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
 
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-  
-
-  <dt>Regulations</dt>
-<dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -305,15 +298,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 
 <div class="box box-downloads">
-<h2>Downloads</h2>
+<h2>Student Academic Summary</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
 </ul>
 </div>
-
 </div>
 
 </div>
