--- a/study-record-old-framework.html
+++ b/study-record-old-framework.html
@@ -124,9 +124,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <form style="float:right; margin:12px 10px 0 0;">
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
 <option value="study-record.html">Standard</option>
-    <option value="study-record-old-framework.html">Old Framework</option>
+    <option value="study-record-old-framework.html" selected>Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html" >Access Module</option>
     <option value="study-record-resit.html">Resit</option>
       <option value="study-record-failed-resit.html" selected>Failed resit</option>
     <option value="study-record-deferred.html">Deferred</option>
@@ -231,6 +231,11 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <hr>
 
 <dl class="show-hide">
+<dt>Qualification Regulations</dt>
+  <dd>
+    <p>Regulations specific to your qualification: <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
+    <p><a href="#">General Qualification Regulations</a></p>
+  </dd>
 <dt>Educational aims and learning outcomes</dt>
 <dd>
    
@@ -267,20 +272,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
 </dd>
 
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
 
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-
-
-  <dt>Regulations</dt>
-<dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-</dd>
 
   <dt>Qualification Fee</dt>
 <dd>
@@ -323,7 +315,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <div class="r3 aside">
 
-
+<div class="box box-questions">
+<h2>Your Qualifications</h2>
+<p>View information for...
+<ul>
+  <li><a href="#qual1">Bachelor of Engineering (Honours)</a></li>
+<li><a href="#qual2">Certficate in Humanities</a></li>
+</ul>
+</div>
 <div class="box box-questions">
 <h2>How do I?</h2>
 <ul>
@@ -339,12 +338,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div>
 
 <div class="box box-downloads">
-<h2>Downloads</h2>
+<h2>Student Academic Summary</h2>
 <ul>
-  <li><a href="#">Student Academic Summary</a></li>
-  <li><a href="#">Conditions of registration</a></li>
-  <li><a href="#">Fee rules</a></li>
-  <li><a href="#">General Qualifications Regulations</a></li>
+  <li><a href="#">Download a summary of all your OU study</a></li>
+
 </ul>
 </div>
 
